[package]
name = "zebra"
version = "0.0.0"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.dev"]
license = "MIT/Apache-2.0"
repository = "https://github.com/zebra-rs/zebra"
description = "Re-implementation of GNU Zebra, Quagga, FRR in Rust programming language."
edition = "2018"
build = "build.rs"

[build-dependencies]
glob = "0.2.*"
syntex = "0.42" # where version is the version of syntex used in pnet_macros/Cargo.toml
pnet_macros = "*"

[dependencies]
lazy_static = "1.4.0"
failure = "0.1.6"
pnet = "0.25.0"
pnet_macros_support = "0.25.0"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
byteorder = "1.3.4"
