[package]
name = "zebra"
version = "0.0.0"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.dev"]
license = "MIT/Apache-2.0"
repository = "https://github.com/zebra-rs/zebra"
description = "Re-implementation of GNU Zebra, Quagga, FRR in Rust programming language."
edition = "2018"
build = "build.rs"

[build-dependencies]
glob = "0.3.0"
syntex = "0.42"
pnet_macros = "0.25.0"

[dependencies]
lazy_static = "1.4.0"
failure = "0.1.6"
pnet = "0.25.0"
pnet_macros_support = "0.25.0"
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
byteorder = "1.3.4"
bytes = "0.5.4"
